--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  //"ConnectionStrings": {
+  //  "cnTareas": "Data Source= DESKTOP-P8HA53B\\SQLEXPRESS; Initial Catalog=TareasDb;user id=sa; password=aT7463Q3&CDl"
+  //},
   "AllowedHosts": "*"
 }
